// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment tests <Comment /> should render Comment component 1`] = `
<div
  className="ecos-comments__comment"
>
  <div
    className="ecos-comments__comment-header"
  >
    <div
      className="ecos-comments__comment-header-cell"
    >
      <Avatar
        className="ecos-comments__comment-avatar"
        classNameEmpty="ecos-comments__comment-avatar_empty"
        noBorder={true}
        url=""
        userName=""
      />
      <div
        className="ecos-comments__comment-header-column ecos-comments__comment-name-container"
      >
        <div
          className="ecos-comments__comment-name"
        >
          Admin
           
          Adminovich
        </div>
        <div
          className="ecos-comments__comment-name"
        >
          Administratorov
        </div>
        <div
          className="ecos-comments__comment-date"
        >
          comments-widget.now
        </div>
      </div>
      <div
        className="ecos-comments__comment-header-column ecos-comments__comment-tag-container"
      />
    </div>
    <div
      className="ecos-comments__comment-header-cell ecos-comments__comment-header-cell_actions"
    />
  </div>
  <div
    className="ecos-comments__comment-text"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Comment",
      }
    }
  />
</div>
`;

exports[`Comment tests <Comment /> should render Comment component with opened delete confirm dialog 1`] = `
<div
  className="ecos-comments__comment"
>
  <div
    className="ecos-comments__comment-header"
  >
    <div
      className="ecos-comments__comment-header-cell"
    >
      <Avatar
        className="ecos-comments__comment-avatar"
        classNameEmpty="ecos-comments__comment-avatar_empty"
        noBorder={true}
        url=""
        userName=""
      />
      <div
        className="ecos-comments__comment-header-column ecos-comments__comment-name-container"
      >
        <div
          className="ecos-comments__comment-name"
        >
          Admin
           
          Adminovich
        </div>
        <div
          className="ecos-comments__comment-name"
        >
          Administratorov
        </div>
        <div
          className="ecos-comments__comment-date"
        >
          comments-widget.now
        </div>
      </div>
      <div
        className="ecos-comments__comment-header-column ecos-comments__comment-tag-container"
      />
    </div>
    <div
      className="ecos-comments__comment-header-cell ecos-comments__comment-header-cell_actions"
    />
  </div>
  <div
    className="ecos-comments__comment-text"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Comment",
      }
    }
  />
  <div
    className="ecos-comments__comment-confirm"
  >
    <div
      className="ecos-comments__comment-confirm-group"
    >
      <div
        className="ecos-comments__comment-confirm-title"
      >
        comments-widget.confirm.title
        ?
      </div>
      <div
        className="ecos-comments__comment-confirm-btns"
      >
        <Btn
          className="ecos-btn_grey5 ecos-btn_hover_color-grey ecos-comments__comment-confirm-btn"
          onClick={[Function]}
        >
          comments-widget.confirm.cancel
        </Btn>
        <Btn
          className="ecos-btn_red ecos-comments__comment-confirm-btn"
          onClick={[Function]}
        >
          comments-widget.confirm.delete
        </Btn>
      </div>
    </div>
  </div>
</div>
`;

exports[`Comment tests <Comment /> should render Comment component with opened delete confirm dialog with loader 1`] = `
<div
  className="ecos-comments__comment"
>
  <div
    className="ecos-comments__comment-header"
  >
    <div
      className="ecos-comments__comment-header-cell"
    >
      <Avatar
        className="ecos-comments__comment-avatar"
        classNameEmpty="ecos-comments__comment-avatar_empty"
        noBorder={true}
        url=""
        userName=""
      />
      <div
        className="ecos-comments__comment-header-column ecos-comments__comment-name-container"
      >
        <div
          className="ecos-comments__comment-name"
        >
          Admin
           
          Adminovich
        </div>
        <div
          className="ecos-comments__comment-name"
        >
          Administratorov
        </div>
        <div
          className="ecos-comments__comment-date"
        >
          comments-widget.now
        </div>
      </div>
      <div
        className="ecos-comments__comment-header-column ecos-comments__comment-tag-container"
      />
    </div>
    <div
      className="ecos-comments__comment-header-cell ecos-comments__comment-header-cell_actions"
    />
  </div>
  <div
    className="ecos-comments__comment-text"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Comment",
      }
    }
  />
  <div
    className="ecos-comments__comment-confirm"
  >
    <div
      className="ecos-comments__comment-confirm-group"
    >
      <div
        className="ecos-comments__comment-confirm-title"
      >
        comments-widget.confirm.title
        ?
      </div>
      <div
        className="ecos-comments__comment-confirm-btns"
      >
        <Btn
          className="ecos-btn_grey5 ecos-btn_hover_color-grey ecos-comments__comment-confirm-btn"
          onClick={[Function]}
        >
          comments-widget.confirm.cancel
        </Btn>
        <Btn
          className="ecos-btn_red ecos-comments__comment-confirm-btn"
          onClick={[Function]}
        >
          comments-widget.confirm.delete
        </Btn>
      </div>
    </div>
    <Loader
      blur={true}
      className=""
      color="light-blue"
      darkened={false}
      height={45}
      rounded={false}
      type="circle"
      width={45}
      zIndex={null}
    />
  </div>
</div>
`;

exports[`Comment tests <Comment /> should render Comment component with opened delete confirm dialog without loader (because of a mistake) 1`] = `
<div
  className="ecos-comments__comment"
>
  <div
    className="ecos-comments__comment-header"
  >
    <div
      className="ecos-comments__comment-header-cell"
    >
      <Avatar
        className="ecos-comments__comment-avatar"
        classNameEmpty="ecos-comments__comment-avatar_empty"
        noBorder={true}
        url=""
        userName=""
      />
      <div
        className="ecos-comments__comment-header-column ecos-comments__comment-name-container"
      >
        <div
          className="ecos-comments__comment-name"
        >
          Admin
           
          Adminovich
        </div>
        <div
          className="ecos-comments__comment-name"
        >
          Administratorov
        </div>
        <div
          className="ecos-comments__comment-date"
        >
          comments-widget.now
        </div>
      </div>
      <div
        className="ecos-comments__comment-header-column ecos-comments__comment-tag-container"
      />
    </div>
    <div
      className="ecos-comments__comment-header-cell ecos-comments__comment-header-cell_actions"
    />
  </div>
  <div
    className="ecos-comments__comment-text"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Comment",
      }
    }
  />
  <div
    className="ecos-comments__comment-confirm"
  >
    <div
      className="ecos-comments__comment-confirm-group"
    >
      <div
        className="ecos-comments__comment-confirm-title"
      >
        comments-widget.confirm.title
        ?
      </div>
      <div
        className="ecos-comments__comment-confirm-btns"
      >
        <Btn
          className="ecos-btn_grey5 ecos-btn_hover_color-grey ecos-comments__comment-confirm-btn"
          onClick={[Function]}
        >
          comments-widget.confirm.cancel
        </Btn>
        <Btn
          className="ecos-btn_red ecos-comments__comment-confirm-btn"
          onClick={[Function]}
        >
          comments-widget.confirm.delete
        </Btn>
      </div>
    </div>
  </div>
</div>
`;

exports[`Comment tests <Comment /> should render Comment component with tags 1`] = `
<div
  className="ecos-comments__comment"
>
  <div
    className="ecos-comments__comment-header"
  >
    <div
      className="ecos-comments__comment-header-cell"
    >
      <Avatar
        className="ecos-comments__comment-avatar"
        classNameEmpty="ecos-comments__comment-avatar_empty"
        noBorder={true}
        url=""
        userName=""
      />
      <div
        className="ecos-comments__comment-header-column ecos-comments__comment-name-container"
      >
        <div
          className="ecos-comments__comment-name"
        >
          Admin
           
          Adminovich
        </div>
        <div
          className="ecos-comments__comment-name"
        >
          Administratorov
        </div>
        <div
          className="ecos-comments__comment-date"
        >
          comments-widget.now
        </div>
      </div>
      <div
        className="ecos-comments__comment-header-column ecos-comments__comment-tag-container"
      >
        <Badge
          className="ecos-comments__comment-tag"
          popupClassName="ecos-comments__comment-tag-popper"
          size="small"
          state="info"
          style={Object {}}
          text=""
          withPopup={true}
        />
        <Badge
          className="ecos-comments__comment-tag"
          popupClassName="ecos-comments__comment-tag-popper"
          size="small"
          state="info"
          style={Object {}}
          text=""
          withPopup={true}
        />
        <Badge
          className="ecos-comments__comment-tag"
          popupClassName="ecos-comments__comment-tag-popper"
          size="small"
          state="info"
          style={Object {}}
          text=""
          withPopup={true}
        />
      </div>
    </div>
    <div
      className="ecos-comments__comment-header-cell ecos-comments__comment-header-cell_actions"
    />
  </div>
  <div
    className="ecos-comments__comment-text"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Comment",
      }
    }
  />
</div>
`;
